2012-03-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLDTDNode.m: Correct node type, at least for entity nodes.
	* Source/NSXMLDTD.m: Use predefined entities from libxml2.
	* Source/NSXMLNode.m: Rewrite the ownership transfer to preserve
	names in dictionaries.

2012-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Remvoe unused ivars.
	* Source/NSXMLDocument.m: Get DTD from node and and validation in
	init methods.
	* Source/NSXMLDTD.m: Implement.
	* Source/NSXMLNode.m: No children for attribute nodes.
	* Tests/base/NSXMLNode/basic.m: Test empty attribute children

2012-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-XMLStringWithOptions:): Protect the
	different format constants with version checks.

2012-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLDocument.m (-XMLDataWithOptions:): Correct convesion
	to NSData. Add some comments.

2012-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Add comments on owner policy.
	* Source/NSXMLNode.m (-XMLStringWithOptions:): Reimplement to
	allow closer control over output.
	* Source/NSXMLDocument.m (-XMLStringWithOptions:): Remove this method.

2012-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLPrivate.h:
	* Source/NSXMLNode.m:
	* Source/NSXMLElement.m:
	Fixups to get the code to build on CentOS/RedHat linux.

2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-detach): Don't handle the namespace case.
	* Source/NSXMLElement.m (-removeNamespaceForPrefix:): Implement.
	* Tests/base/NSXMLNode/basic.m: Move tests from here ...
	* Tests/base/NSXMLElement/basic.m: ... to here.

2012-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m: Correct used namespace field.
	* Source/NSXMLNode.m: Implement special handling for namespace nodes.
	* Tests/base/NSXMLNode/basic.m: Correct method name for namespace node.

2012-03-11  Richard Frith-Macdonald & Fred Kiefer

	* Source/NSXMLNamespace.m:
	* Source/GNUmakefile: